--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,7 +29,7 @@ jobs:
           distribution: 'temurin'         # JDK 배포판(zulu, adopt, openjdk..) 지정, Eclipse Temurin은 OpenJDK 기반 배포판
 
       - name: Build with Gradle Wrapper   # Gradle 빌드 사용해 프로젝트를 빌드
-        run: ./edu-user/gradlew build              # 이 단계에서 실행할 쉘 명령어 : gradle build 실행
+        run: edu-user/gradlew build              # 이 단계에서 실행할 쉘 명령어 : gradle build 실행
 
       - name: Setup Kustomize                 # Kubernetes 리소스 관리, 배포하는 Kustomize 설치
         uses: imranismail/setup-kustomize@v1  # GitHub Actions 제공하는 setup-kustomize 액션 사용(imranismail 만든 Action)
