--- a/edu-user/manifests/overlays/edu-user/deployment.yaml
+++ b/edu-user/manifests/overlays/edu-user/deployment.yaml
@@ -1,45 +1,95 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: k8s-edu-user-deployment
+  name: edu-user-deployment
   namespace: edu-user
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: k8s-edu-user-app
-  replicas: 1
+      app: edu-user
   template:
     metadata:
       labels:
-        app: k8s-edu-user-app
+        app: edu-user
     spec:
       containers:
-        - name: k8s-edu-user-app
-          image: ydcho0902/k8s-edu             # dockerhub image repository : repo/image명:Tag
-          imagePullPolicy: IfNotPresent        # k8s 클러스터에 다운로드 된 이미지 없으면 다운 or Always
-          ports:
-            - name: http
-              containerPort: 8080              # demo.jar 실행 포트
-              protocol: TCP
-          resources:                           # pod 사용 리소스 설정 블록
-            requests:                          # 생성시 필요한 최소 리소스
-              cpu: "300m"
-              memory: "500Mi"
-            limits:                            # pod가 사용 가능한 최대 리소스
-              cpu: "300m"
-              memory: "500Mi"
-          volumeMounts:
-            - name: application-properties
-              mountPath: /app/config
-              readOnly: true
-      volumes:
-        - name: application-properties
-          configMap:
-            name: "k8s-edu-user-configmap"
-            items:
-              - key: application.yml
-                path: application.yml
-      imagePullSecrets:                        # dockerhub 이미지 pull 위한 secret
-        - name: k8s-edu-dockerhub-secret
-      nodeSelector:                            # pod가 실행 될 node 설정
-        kubernetes.io/hostname: worker01
+      - name: edu-user
+        image: choms0209/k8s-edu:v0.0.8
+        imagePullPolicy: IfNotPresent
+        ports:
+          - name: http
+            containerPort: 8080
+            protocol: TCP
+        resources:
+          requests:
+            cpu: "1"
+            memory: "2Gi"
+          limits:
+            cpu: "1"
+            memory: "2Gi"
+        env:
+          - name: SPRING_PROFILES_ACTIVE
+            value: prod
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 10
+      imagePullSecrets:
+        - name: edu-user-secret
+        
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: edu-user-service
+  namespace: edu-user
+spec:
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: edu-user
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: edu-user-ingress
+  namespace: edu-user
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: "edu-user.211.254.212.192.sslip.io"
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: edu-user-service
+                port:
+                  number: 80
+
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: edu-user-hpa
+  namespace: edu-user
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: edu-user-deployment
+  minReplicas: 2
+  maxReplicas: 4
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 30
