--- a/edu-user/manifests/base/ingress.yaml
+++ b/edu-user/manifests/base/ingress.yaml
@@ -1,18 +1,18 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: k8s-edu-ingress
-  namespace: default  
+  name: edu-user-ingress
+  namespace: edu-user
 spec:
   ingressClassName: nginx
   rules:
-    - host: "edu-user.211.253.25.128.sslip.io"
+    - host: "edu-user.211.254.212.192.sslip.io"
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: k8s-edu-user-service
+                name: edu-user-service
                 port:
                   number: 80
