--- a/edu-user/manifests/overlays/prod/kustomization.yaml
+++ b/edu-user/manifests/overlays/prod/kustomization.yaml
@@ -5,9 +5,9 @@ resources:
 - ../../base
 #  - pvc.yaml
 patchesStrategicMerge:
-- configmap.yaml
+# - configmap.yaml
 - deployment.yaml
-- ingress.yaml
+# - ingress.yaml
 images:
 - name: choms0209/k8s-edu
   newTag: "202501231427"
