--- a/edu-user/manifests/overlays/prod/kustomization.yaml
+++ b/edu-user/manifests/overlays/prod/kustomization.yaml
@@ -4,9 +4,9 @@ kind: Kustomization
 resources:
 - ../../base
 #  - pvc.yaml
-patchesStrategicMerge:
+#patchesStrategicMerge:
 # - configmap.yaml
-- deployment.yaml
+# - deployment.yaml
 # - ingress.yaml
 images:
 - name: choms0209/k8s-edu
